# Jeepify_Monitor_WSL

./: lv_conf.h  platformio.ini
SQ-Jeepify-Monitor480/: SQ-Jeepify-Monitor480.sll  SQ-Jeepify-Monitor480.spj  SQ-Jeepify-Monitor480_events.py  Themes.slt
include/: CompButton.h  CustomScreens.h  main.h  pincfg.h  webserver.h
src/: CompButton.cpp  CustomScreens.cpp  Dev_240_klein_lvgl_v8_port.cpp  Dev_240_klein_lvgl_v8_port.h  Dev_360_knob_knob.c  (+16 more)
src/Ui_240/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.cpp  ui_themes.h
src/Ui_240/components/: ui_comp.c  ui_comp.h  ui_comp_buttonsensorsmall.c  ui_comp_buttonsensorsmall.h  ui_comp_hook.c  ui_comp_hook.h
src/Ui_240/images/: ui_img_1134846501.c  ui_img_1471590615.c  ui_img_1528892059.c  ui_img_1562670045.c  ui_img_1640860301.c  ui_img_1769637049.c  ui_img_237434643.c  ui_img_434995191.c  ui_img_587468927.c  ui_img_715952573.c  ui_img_743505413.c  ui_img_888658411.c  ui_img_ansgarmodule_4_png.c  ui_img_btn_off_png.c  ui_img_btn_png.c  ui_img_friedermodule_disp_png.c  ui_img_horstrelais2_png.c  ui_img_jeepifybackground_png.c  ui_img_menubtn1_png.c  ui_img_menubtn2_png.c  ui_img_menubtn3_png.c  ui_img_menubtn4_png.c  ui_img_rolfmodule_round_png.c  ui_img_rubicon_png.c
src/Ui_240/screens/: ui_ScrEichen.c  ui_ScrEichen.h  ui_ScrJSON.c  ui_ScrJSON.h  ui_ScrMenu.c  ui_ScrMenu.h  ui_ScrMulti.c  ui_ScrMulti.h  ui_ScrPeer.c  ui_ScrPeer.h  ui_ScrPeers.c  ui_ScrPeers.h  ui_ScrPeriph.c  ui_ScrPeriph.h  ui_ScrSettings.c  ui_ScrSettings.h  ui_ScrVolt.c  ui_ScrVolt.h
(+190 files in other folders)
