SET(SOURCES components/ui_comp_buttonsensorsmall.c
    components/ui_comp.c
    screens/ui_ScrMenu.c
    screens/ui_ScrSettings.c
    screens/ui_ScrPeers.c
    screens/ui_ScrJSON.c
    screens/ui_ScrPeer.c
    screens/ui_ScrEichen.c
    screens/ui_ScrVolt.c
    screens/ui_ScrPeriph.c
    screens/ui_ScrMulti.c
    ui_theme_manager.cpp
    ui_themes.cpp
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.cpp
    images/ui_img_jeepifybackground_png.c
    images/ui_img_rubicon_png.c
    images/ui_img_menubtn1_png.c
    images/ui_img_menubtn2_png.c
    images/ui_img_menubtn3_png.c
    images/ui_img_menubtn4_png.c
    images/ui_img_friedermodule_disp_png.c
    images/ui_img_horstrelais2_png.c
    images/ui_img_1769637049.c
    images/ui_img_rolfmodule_round_png.c
    images/ui_img_ansgarmodule_4_png.c
    images/ui_img_1528892059.c
    images/ui_img_1471590615.c
    images/ui_img_743505413.c
    images/ui_img_1134846501.c
    images/ui_img_237434643.c
    images/ui_img_1640860301.c
    images/ui_img_715952573.c
    images/ui_img_434995191.c
    images/ui_img_888658411.c)

add_library(ui ${SOURCES})
